--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,24 @@ body {
 #inicio {
     background-color: brown;
     color: white;
-    width: 200px;
+    width: 180px;
     font-size: 1rem;
     border-radius: 40px;
     padding: 20px 40px;
-    margin: 15px 45px 15px;
+    margin: 10px 45px 10px;
 }
 
 #categoria {
     background: white;
-    width: 30rem;
-    padding: 6rem;
+    margin-top: 5rem;
+    width: 20rem;
+    padding: 5rem;
     text-align: center;
 }
 
 h1 {
     color: blue;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 #preguntas {
@@ -42,7 +43,7 @@ h1 {
 .botones {
     background-color: brown;
     color: white;
-    width: 200px;
+    width: 150px;
     font-size: 1rem;
     border-radius: 40px;
     padding: 20px 40px;
